# gq2Qmn

./: .gitignore  pyproject.toml
app/: init_db.py  main.py
app/database/: core.py
app/dependencies/: get_session.py
aup/: main.py  pyproject.toml  wh.py
aup/app/: exceptions.py  router.py  service.py
back/: pyproject.toml  requirements.txt  run.py  shop.db
back/app/: config.py  database.py  main.py
back/app/models/: category.py  product.py
back/app/repositories/: category_rep.py  product_rep.py
back/app/routes/: categories.py
back/app/schemas/: category.py  product.py
back/app/services/: cart_service.py  category_service.py  product_service.py
back/app/tests/: conftest.py  test_crud.py
bot/: main.py  pyproject.toml
broker/: main.py  pyproject.toml
csv-files/: main.py  pyproject.toml
fucking-shit/: alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test.db
fucking-shit/alembic/: env.py
fucking-shit/alembic/versions/: bab7fea8fc21_add_price.py
fucking-shit/app/db/: database.py
fucking-shit/app/dependencies/: get_session.py
fucking-shit/app/models/: products.py
fucking-shit/app/routers/: products.py
fucking-shit/app/schemas/: products.py
fucking-shit/app/schemas/exceptions/: products.py
fucking-shit/app/services/: products.py
fucking-shit/tests/: conftest.py  test_products.py
mini-pet/: config.py  db.py  db.sqlite3  gemeni_client.py  main.py  pyproject.toml
parse-sites/: main.py  pyproject.toml
rout_req_crd/: main.py  test.db
small_api_reqs/: main.py
test-task01/: pyproject.toml  pytest.ini  test.db
test-task02/: cipher.py  main.py  pyproject.toml  schemas.py
(+34 files in other folders)
