[project]
name = "zalupa"
version = "0.1.0"
description = ""
authors = [
    {name = "miramiramirami",email = "xeless@mail.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.128.0,<0.129.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
